force-app/main/default/objects/Case_Autonomy_Policy__mdt/Case_Autonomy_Policy__mdt.object-meta.xml
<CustomObject><label>Case Autonomy Policy</label><pluralLabel>Case Autonomy Policies</pluralLabel><visibility>Public</visibility></CustomObject>