force-app/main/default/objects/Case_Autonomy_Policy__mdt/fields/Configuration_Version__c.field-meta.xml
<CustomField><fullName>Configuration_Version__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Configuration Version</label><length>80</length><type>Text</type></CustomField>