force-app/main/default/objects/Case_Autonomy_Policy__mdt/fields/Enabled__c.field-meta.xml
<CustomField><fullName>Enabled__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><defaultValue>false</defaultValue><label>Enabled</label><type>Checkbox</type></CustomField>