force-app/main/default/objects/Case_Autonomy_Policy__mdt/fields/Minimum_Cases__c.field-meta.xml
<CustomField><fullName>Minimum_Cases__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Minimum Cases</label><precision>8</precision><scale>0</scale><type>Number</type></CustomField>